fixing the logic

--- a/experiments/sunnycows/collab_filtering.ipynb
+++ b/experiments/sunnycows/collab_filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_52340/426162978.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_13655/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  users = pd.read_csv('../../data/Users.csv', delimiter=';')\n"
      ]
     }
    ],
    "source": [
     "users = pd.read_csv('../../data/Users.csv', delimiter=';')\n",
-    "books = pd.read_csv('../../data/Books.csv', delimiter=';')\n",
-    "ratings = pd.read_csv('../../data/Ratings.csv', delimiter=';')"
+    "books = pd.read_csv('../../data/Books.csv', delimiter=';', dtype={'ISBN': str, 'Title': str, 'Author': str, 'Year': np.int16, 'Publisher': str})\n",
+    "ratings = pd.read_csv('../../data/Ratings.csv', delimiter=';', dtype={'User-ID': np.int32, 'ISBN': str, 'Rating': np.int8})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4   276729  0521795028       6"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,85 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>User-ID</th>\n",
-       "      <th>Age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  User-ID  Age\n",
-       "0       1  NaN\n",
-       "1       2   18\n",
-       "2       3  NaN\n",
-       "3       4   17\n",
-       "4       5  NaN"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "users.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +209,7 @@
        "4       E. J. W. Barber  1999   W. W. Norton & Company  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +229,7 @@
        "271378"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +292,7 @@
        "111813  Stephen Crane  1998  Dover Publications  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +365,7 @@
        "111813  Stephen Crane  1998  Dover Publications  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,70 +376,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "books.drop_duplicates(subset='ISBN', inplace=True)"
+    "books.drop_duplicates(subset='ISBN', inplace=True)\n",
+    "books = books.reset_index()\n",
+    "\n",
+    "isbn_mapping = {category: idx for idx, category in enumerate(books['ISBN'])}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User-ID</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>ISBN_i</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>276736</td>\n",
+       "      <td>3257224281</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>276737</td>\n",
+       "      <td>0600570967</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>276745</td>\n",
+       "      <td>342310538</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>276748</td>\n",
+       "      <td>3442437407</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>276751</td>\n",
+       "      <td>033390804X</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "278859"
+       "    User-ID        ISBN  Rating  ISBN_i\n",
+       "6    276736  3257224281       8     NaN\n",
+       "7    276737  0600570967       6     NaN\n",
+       "9    276745   342310538      10     NaN\n",
+       "25   276748  3442437407       0     NaN\n",
+       "26   276751  033390804X       0     NaN"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "users['User-ID'].nunique()"
+    "ratings['ISBN_i'] = ratings['ISBN'].map(isbn_mapping)\n",
+    "\n",
+    "unknown_isbns = ratings[ratings['ISBN_i'].isna()]\n",
+    "unknown_isbns.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(278859, 2)"
+       "(118605, 4)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "users.shape"
+    "unknown_isbns.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping unknown ISBNs, ratings.shape = (1149780, 4)\n",
+      "Dropping unknown ISBNs, ratings.shape = (1031175, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Dropping unknown ISBNs, ratings.shape = {ratings.shape}\")\n",
+    "ratings.dropna(subset=['ISBN_i'], inplace=True)\n",
+    "print(f\"Dropping unknown ISBNs, ratings.shape = {ratings.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.sparse import csr_matrix\n",
-    "\n",
-    "isbn_mapping = {category: idx for idx, category in enumerate(ratings['ISBN'])}\n",
-    "ratings['Book'] = ratings['ISBN'].map(isbn_mapping)\n",
-    "\n",
-    "user_item_matrix = csr_matrix((ratings['Rating'], (ratings['User-ID'], ratings['Book'])), dtype=np.float64)"
+    "ratings['ISBN_i'] = ratings['ISBN_i'].astype(np.int32)\n",
+    "user_item_matrix = csr_matrix((ratings['Rating'], (ratings['User-ID'], ratings['ISBN_i'])), dtype=np.float64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -549,16 +564,16 @@
      "output_type": "stream",
      "text": [
       "[0.]\n",
-      "[0.]\n",
-      "[-2.16666667 -2.16666667  2.83333333 -2.16666667  2.83333333  3.83333333\n",
-      " -2.16666667  2.83333333 -2.16666667 -2.16666667  3.83333333 -2.16666667\n",
-      "  4.83333333 -2.16666667 -2.16666667 -2.16666667  2.83333333 -2.16666667]\n",
+      "[ 2.70588235 -2.29411765 -2.29411765 -2.29411765 -2.29411765 -2.29411765\n",
+      " -2.29411765 -2.29411765  2.70588235 -2.29411765 -2.29411765  2.70588235\n",
+      "  2.70588235 -2.29411765  3.70588235  3.70588235  4.70588235]\n",
       "[-2.  4. -2.]\n",
-      "[ 3. -3.]\n",
       "[0.]\n",
-      "[ 2.  1.  1. -4.]\n",
+      "[0.]\n",
+      "[ 1.  1.  2. -4.]\n",
       "[ 4.5 -4.5]\n",
-      "[ 2. -3.  0. -3.  3.  4. -3.]\n",
+      "[-3. -3.  0. -3.  4.  3.  2.]\n",
+      "[0.]\n",
       "[0.]\n"
      ]
     }
@@ -602,16 +617,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
     "nbrs = NearestNeighbors(n_neighbors=30, metric='cosine', algorithm='auto').fit(normalized_matrix)\n",
-    "\n",
-    "\n",
-    "distances, indices = nbrs.kneighbors(normalized_matrix)\n"
+    "distances, indices = nbrs.kneighbors(normalized_matrix)"
    ]
   },
   {
@@ -636,14 +649,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(902097,)\n"
+      "(851778,)\n"
      ]
     }
    ],
@@ -654,30 +667,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "number_to_isbn = {}\n",
-    "for isbn, number in isbn_mapping.items():\n",
-    "    if number not in number_to_isbn:\n",
-    "        number_to_isbn[number] = []\n",
-    "    number_to_isbn[number].append(isbn)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indexes of top 5 elements: [1143765 1138369 1148049 1116610 1100471]\n",
-      "Empty DataFrame\n",
-      "Columns: [ISBN, Title, Author, Year, Publisher]\n",
-      "Index: []\n"
+      "user 98391 rated 5779 books\n",
+      "Indexes of top 5 elements: [  5503  21287 157131   3737  20861]\n",
+      "              ISBN                                              Title  \\\n",
+      "5503    0874776945  The Artist's Way : A Spiritual Path to Higher ...   \n",
+      "21287   0446606189                    Cat & Mouse (Alex Cross Novels)   \n",
+      "157131  0895551926  Martyrs of the Coliseum With Historical Record...   \n",
+      "3737    0446365505                                    Pleading Guilty   \n",
+      "20861   038072362X                                   A Superior Death   \n",
+      "\n",
+      "                 Author  Year                      Publisher  \n",
+      "5503      Julia Cameron  1992              Jeremy P. Tarcher  \n",
+      "21287   James Patterson  1998                   Warner Books  \n",
+      "157131    A. J. Oreilly  1987                Tan Books & Pub  \n",
+      "3737        Scott Turow  1994                   Warner Books  \n",
+      "20861       Nevada Barr  2002  Harper Mass Market Paperbacks  \n"
      ]
     }
    ],
@@ -685,10 +696,12 @@
     "def recommend(user_id, ratings, books, n_neighbors=10, n_recomm=5):\n",
     "    # Get the row corresponding to the user\n",
     "    user_row = ratings.getrow(user_id)\n",
-    "    \n",
+    "    print(f\"user {user_id} rated {len(user_row.indices)} books\")\n",
+    "\n",
     "    # Find the nearest neighbors\n",
     "    distances, indices = nbrs.kneighbors(user_row, n_neighbors)\n",
-    "    \n",
+    "    #print(f\"Indices of nearest neighbors ({user_id}): {indices}\")\n",
+    "\n",
     "    # Get the ratings of the neighbors\n",
     "    neighbor_ratings = normalized_matrix[indices[0]].toarray()\n",
     "    weighted_rows = neighbor_ratings * distances[0][:, np.newaxis]\n",
@@ -696,57 +709,18 @@
     "    result_vector = weighted_rows.sum(axis=0)\n",
     "    result_vector = result_vector / distances.sum()\n",
     "\n",
+    "    result_vector.ravel()[user_row.indices] = 0\n",
+    "\n",
     "    sorted_indices = np.argsort(result_vector)\n",
-    "    top_5_indices = sorted_indices[-5:][::-1]\n",
+    "    top_indices = sorted_indices[-n_recomm:][::-1]\n",
     "\n",
-    "    print(\"Indexes of top 5 elements:\", top_5_indices)\n",
-    "    \n",
-    "    isbns = [number_to_isbn[key] for key in top_5_indices]\n",
+    "    print(\"Indexes of top 5 elements:\", top_indices)\n",
     "\n",
-    "    return books[books['ISBN'].isin(isbns)]\n",
+    "    return books.iloc[top_indices]\n",
     "\n",
-    "top5 = recommend(users.sample(n=1)['User-ID'], normalized_matrix, books, n_neighbors=30, n_recomm=5)\n",
-    "print(top5)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['0316779490'], ['0684195046'], ['0679442790'], ['1573229326'], None]"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(map(number_to_isbn.get, [1129735, 769768, 1147096, 1148503,  383256]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(271378, 5)"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "books.shape"
+    "top5 = recommend(ratings.sample(n=1)['User-ID'].astype(np.int32).values[0], normalized_matrix, books, n_neighbors=30, n_recomm=5)\n",
+    "print(top5)\n",
+    "\n"
    ]
   }
  ],
