--- a/experiments/sunnycows/collab_filtering.ipynb
+++ b/experiments/sunnycows/collab_filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_13655/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_27470/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  users = pd.read_csv('../../data/Users.csv', delimiter=';')\n"
      ]
     }
@@ -717,10 +717,153 @@
     "    print(\"Indexes of top 5 elements:\", top_indices)\n",
     "\n",
     "    return books.iloc[top_indices]\n",
-    "\n",
-    "top5 = recommend(ratings.sample(n=1)['User-ID'].astype(np.int32).values[0], normalized_matrix, books, n_neighbors=30, n_recomm=5)\n",
-    "print(top5)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user 241980 rated 314 books\n",
+      "Indexes of top 5 elements: [10928 13283 61813   706 79358]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Publisher</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10928</th>\n",
+       "      <td>0446608815</td>\n",
+       "      <td>Pop Goes the Weasel</td>\n",
+       "      <td>James Patterson</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>Warner Vision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13283</th>\n",
+       "      <td>0671642561</td>\n",
+       "      <td>Fallen Hearts</td>\n",
+       "      <td>V.C. Andrews</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>Pocket</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61813</th>\n",
+       "      <td>0061031011</td>\n",
+       "      <td>Have a Nice Day!: A Tale of Blood and Sweatsocks</td>\n",
+       "      <td>Mick Foley</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>ReganBooks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706</th>\n",
+       "      <td>0446672211</td>\n",
+       "      <td>Where the Heart Is (Oprah's Book Club (Paperba...</td>\n",
+       "      <td>Billie Letts</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>Warner Books</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79358</th>\n",
+       "      <td>0743428617</td>\n",
+       "      <td>Midnight Flight (Broken Wings)</td>\n",
+       "      <td>V.C. Andrews</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Pocket Star</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             ISBN                                              Title  \\\n",
+       "10928  0446608815                                Pop Goes the Weasel   \n",
+       "13283  0671642561                                      Fallen Hearts   \n",
+       "61813  0061031011   Have a Nice Day!: A Tale of Blood and Sweatsocks   \n",
+       "706    0446672211  Where the Heart Is (Oprah's Book Club (Paperba...   \n",
+       "79358  0743428617                     Midnight Flight (Broken Wings)   \n",
+       "\n",
+       "                Author  Year      Publisher  \n",
+       "10928  James Patterson  2000  Warner Vision  \n",
+       "13283     V.C. Andrews  1988         Pocket  \n",
+       "61813       Mick Foley  2000     ReganBooks  \n",
+       "706       Billie Letts  1998   Warner Books  \n",
+       "79358     V.C. Andrews  2003    Pocket Star  "
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommend(ratings.sample(n=1)['User-ID'].astype(np.int32).values[0], normalized_matrix, books, n_neighbors=30, n_recomm=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../..')\n",
+    "\n",
+    "import src.recommenders.user_collaborative_filtering as ubcf\n",
+    "\n",
+    "model = ubcf.UserRecommender()\n",
+    "model.fit(users=users, items=books, ratings=ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[255846]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(users=[ratings.sample(n=1)['User-ID'].astype(np.int32).values[0]], items=books)"
    ]
   }
  ],
