user-user & item-item

--- a/experiments/sunnycows/collab_filtering.ipynb
+++ b/experiments/sunnycows/collab_filtering.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
@@ -829,41 +828,6 @@
    ],
    "source": [
     "recommend(ratings.sample(n=1)['User-ID'].astype(np.int32).values[0], normalized_matrix, books, n_neighbors=30, n_recomm=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('../..')\n",
-    "\n",
-    "import src.recommenders.user_collaborative_filtering as ubcf\n",
-    "\n",
-    "model = ubcf.UserRecommender()\n",
-    "model.fit(users=users, items=books, ratings=ratings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[255846]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.predict(users=[ratings.sample(n=1)['User-ID'].astype(np.int32).values[0]], items=books)"
    ]
   }
  ],
