--- a/experiments/sunnycows/item_item.ipynb
+++ b/experiments/sunnycows/item_item.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_37212/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_42569/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  users = pd.read_csv('../../data/Users.csv', delimiter=';')\n"
      ]
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,103 +54,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_37212/1133943471.py:22: RuntimeWarning: Mean of empty slice.\n",
-      "  means = np.array([normalized_matrix[i].data.mean() for i in range(normalized_matrix.shape[0])])\n",
+      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:29: RuntimeWarning: Mean of empty slice.\n",
+      "  self.means = np.array([normalized_matrix[i].data.mean() for i in range(normalized_matrix.shape[0])])\n",
       "/Users/oleh.sannikov/miniconda3/envs/recsys/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Similarity matrix shape: (271379, 271379)\n",
-      "Item-user matrix shape: (271379, 278855)\n",
-      "User-to-item matrix shape: (278855, 271379)\n"
      ]
     }
    ],
    "source": [
-    "from src.recommenders.base import BaseRecommender\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from scipy.sparse import csr_matrix\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import src.recommenders.item_collaborative_filtering as icf\n",
     "\n",
-    "n_recomm = 5\n",
-    "\n",
-    "books = books.reset_index() # add index as a column\n",
-    "isbn_mapping = {category: idx for idx, category in enumerate(books['ISBN'])}\n",
-    "\n",
-    "ratings = ratings.copy()\n",
-    "ratings['ISBN_i'] = ratings['ISBN'].map(isbn_mapping) # map ISBN to index\n",
-    "ratings.dropna(subset=['ISBN_i'], inplace=True) # drop rows with NaN ISBN_i\n",
-    "ratings['ISBN_i'] = ratings['ISBN_i'].astype(np.int32)\n",
-    "\n",
-    "# Create a sparse user-item matrix\n",
-    "user_item_matrix = csr_matrix((ratings['Rating'], (ratings['User-ID'], ratings['ISBN_i'])), dtype=np.float64)\n",
-    "\n",
-    "# Normalize the user-item matrix\n",
-    "normalized_matrix = user_item_matrix.copy()\n",
-    "means = np.array([normalized_matrix[i].data.mean() for i in range(normalized_matrix.shape[0])])\n",
-    "normalized_matrix.data -= np.repeat(means, np.diff(normalized_matrix.indptr))\n",
-    "\n",
-    "item_user_matrix = csr_matrix((ratings['Rating'], (ratings['ISBN_i'], ratings['User-ID'])), dtype=np.float64)\n",
-    "similarity_matrix = cosine_similarity(normalized_matrix.T, dense_output=False)\n",
-    "\n",
-    "print('Similarity matrix shape:', similarity_matrix.shape)\n",
-    "print('Item-user matrix shape:', item_user_matrix.shape)\n",
-    "print('User-to-item matrix shape:', user_item_matrix.shape)\n",
-    "\n"
+    "model = icf.ItemRecommender()\n",
+    "model.fit(users=users, items=books, ratings=train_ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def list_minus(a, b):\n",
-    "    return [x for x in a if x not in b]\n",
-    "\n",
-    "def predict(users, items):\n",
-    "    user_predictions = {}\n",
-    "    for user_id in users:\n",
-    "        # Get the row corresponding to the user\n",
-    "        user_row = normalized_matrix.getrow(user_id)\n",
-    "        top_rated = np.argsort(user_row.data)[::-1][:n_recomm]\n",
-    "\n",
-    "        recommended_books = []\n",
-    "        for book_i in top_rated:\n",
-    "            book_row = similarity_matrix[book_i]\n",
-    "            most_similar_books = np.argsort(book_row.data)[::-1][:n_recomm]\n",
-    "            recommended_books.extend(most_similar_books)\n",
-    "\n",
-    "        recommended_books = list_minus(set(recommended_books), user_row.indices)\n",
-    "        print(recommended_books)\n",
-    "        average_ratings = {}\n",
-    "        for book in recommended_books:\n",
-    "            # Get the average rating for the book\n",
-    "            average_rating = 0 #normalized_matrix.getcol(book).data.mean()\n",
-    "            average_ratings[book] = average_rating\n",
-    "\n",
-    "        sorted_recommended_books = sorted(recommended_books, key=lambda book: average_ratings[book], reverse=True)[:n_recomm]\n",
-    "\n",
-    "        user_predictions[user_id] = books[books['ISBN'].isin(sorted_recommended_books)]\n",
-    "    \n",
-    "    return user_predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +230,41 @@
       "[0, 69857, 2, 7747, 4, 1, 5, 3, 8, 9, 6, 10, 13, 7727, 15, 7733, 7835]\n",
       "[0, 1, 2, 3, 4, 5, 7, 8, 6684, 19743, 7989, 730, 732, 735, 736, 11254, 759, 6649, 6654]\n",
       "[318, 1, 2, 1347, 1349, 6, 7, 301, 847, 6486, 1337, 314, 317, 29, 22553]\n",
-      "[0, 4096, 11150, 1294, 52504, 4259, 50347, 10549, 7357, 1342, 3648, 3650, 5956, 31820, 1359, 1360, 60498, 1365, 3798, 3799, 37848, 16743, 4204, 4207, 1402]\n"
+      "[0, 4096, 11150, 1294, 52504, 4259, 50347, 10549, 7357, 1342, 3648, 3650, 5956, 31820, 1359, 1360, 60498, 1365, 3798, 3799, 37848, 16743, 4204, 4207, 1402]\n",
+      "[41601, 51330, 3, 4, 5, 6, 20501, 20502, 52504, 35100, 50721, 51108, 45861, 20519, 50347, 3382, 51523, 48451, 31820, 60498, 1490, 37848, 50779, 3163, 52337]\n",
+      "[8, 1425, 1427, 7190, 1431, 1432, 7193, 7199, 38566, 20650, 45109, 28096, 1487, 38609, 1495, 28641, 1634, 38519, 10622]\n",
+      "[0, 1, 2, 3, 8643, 8610, 69857, 7747, 6, 13262, 7727, 7733, 8600, 8729, 7835]\n",
+      "[]\n",
+      "[1, 4868, 25, 27, 50721, 34, 51108, 1959, 1454, 51, 54, 1218, 51523, 73, 1230, 79, 87, 50779, 4830, 13025, 1260, 39537, 52337, 18681, 4861]\n",
+      "[13856, 1, 34, 2, 3, 6, 7, 504, 8, 11, 12, 13813, 23, 13752, 13753, 13852, 29, 30]\n",
+      "[1284, 9225, 9243, 1087, 5056, 1346, 1091, 9933, 1102, 1103, 9935, 2001, 8148, 4962, 4451, 8166, 8167, 8168, 24941, 9327, 4084, 4085, 4086, 9212, 64125]\n",
+      "[4616, 9490, 6039, 13852, 13856, 3106, 7464, 7465, 13752, 13753, 3004, 3007, 9538, 964, 5721, 7514, 1119, 20082, 13813, 9463]\n",
+      "[1, 2, 5009, 17, 20501, 20502, 5015, 5016, 25, 21, 27, 35100, 23, 34, 20519, 51, 53, 48451, 5063, 41543, 16112, 53875, 16115, 16120, 16121]\n",
+      "[0, 4868, 6, 22153, 9, 8508, 18629, 213, 215, 216, 18392, 219, 4830, 28127, 18277, 485, 616, 18283, 39537, 51059, 18681, 4861, 39295]\n",
+      "[30848, 2, 4, 5, 11145, 10, 9, 70797, 11150, 13, 69149, 30, 79007, 30503, 15426, 73, 75, 80, 83, 84, 93913, 68573, 1630, 99, 100]\n",
+      "[641, 900, 14344, 650, 661, 12566, 12567, 18710, 794, 795, 12572, 1312, 31397, 570, 203, 12500, 51669, 92, 18527, 865, 871, 2024, 18409, 873, 2040]\n",
+      "[0, 1, 6, 9, 10, 13, 11150, 1294, 15, 25, 154, 27, 156, 34, 1198, 51, 10549, 363, 244, 1402]\n",
+      "[0, 6664, 22153, 1934, 11150, 1294, 7835, 1949, 1958, 7727, 10549, 7733, 8508, 7747, 212, 213, 215, 216, 2009, 219, 28127, 69857, 51059, 1402, 39295]\n",
+      "[]\n",
+      "[0, 1, 2, 4, 5, 7, 45963, 14, 15, 16, 17, 18, 5779, 3092, 19, 24, 28956, 52639, 51238, 39739, 3049, 3051]\n",
+      "[896, 1, 897, 3, 4, 10, 14, 1045, 662, 663, 664, 665, 5056, 1610, 9933, 9935, 1232, 1233, 12756, 84, 1238, 4962, 4451, 1256, 895]\n",
+      "[1, 2, 3, 4, 5, 3974, 264, 8, 138, 145, 18, 3859, 4003, 1063, 7987, 182, 969, 1101, 973, 12896, 4092, 9598]\n",
+      "[0, 1, 2, 4, 5, 6, 8, 9, 10, 13, 11150, 15, 16, 1294, 149, 35, 39, 10549, 212, 213, 215, 216, 219, 1402]\n",
+      "[15232, 18691, 15753, 29075, 32, 1699, 1700, 13741, 14004, 26422, 36666, 1724, 15293, 14911, 14791, 14029, 27988, 214, 15334, 35815, 16107, 1901, 10487, 25724]\n",
+      "[0, 1, 2, 3, 4, 1924, 5, 6, 1289, 20, 21, 662, 23, 663, 664, 665, 22, 1317, 2342, 59, 12099, 12756]\n",
+      "[0, 130, 1924, 6, 9, 1289, 7835, 37, 2342, 1317, 7727, 7733, 12099, 7747, 212, 213, 215, 216, 219, 69857, 616, 122, 123, 124, 126]\n",
+      "[33931, 14, 3090, 914, 7449, 12316, 7462, 5292, 6322, 6323, 5302, 12730, 27834, 27846, 27859, 23383, 6361, 11232, 40545, 7908, 7526, 14969, 892, 893]\n",
+      "[0, 1, 2, 3, 3333, 3351, 22553, 23074, 301, 314, 317, 3646, 318, 24904, 4172, 11731, 3411, 5476, 4068, 35304, 12649, 4075, 4203, 6522]\n",
+      "[]\n",
+      "[1, 30211, 3, 4, 14, 19, 20, 21, 22, 23, 24, 30, 32, 33, 3495, 39, 30123, 44463, 59, 30141, 30145, 84, 104]\n",
+      "[1, 6, 9, 10, 13, 15, 25, 27, 34, 1959, 1454, 19631, 51, 54, 1218, 73, 1230, 79, 9423, 87, 9433, 13025, 997, 1260, 1023]\n",
+      "[1, 2, 900, 4, 5, 14344, 8, 25, 27, 34, 1959, 1454, 51, 54, 1218, 73, 1230, 79, 87, 865, 13025, 871, 873, 1260]\n",
+      "[1, 29570, 6, 7, 9, 16, 33576, 33578, 43, 51, 183, 187, 60, 65, 11460, 42565, 11206, 24649, 21834, 205, 81, 11219, 11223, 88, 3299]\n",
+      "[32, 1, 2, 131, 3, 11653, 11654, 0, 328, 6, 6929, 306, 6932, 10844, 223]\n",
+      "[1924, 6, 1289, 9, 10, 2187, 13, 2189, 15, 4128, 1317, 2342, 1322, 1326, 1328, 1330, 2232, 12099, 212, 213, 215, 216, 219, 13413, 1652]\n",
+      "[]\n",
+      "[6, 9, 10, 651, 13, 15, 12560, 14618, 6441, 6442, 17083, 574, 582, 18250, 6348, 1490, 610, 15336, 14189]\n",
+      "[1, 3, 4, 6, 9, 10, 13, 14, 15, 16, 149, 35, 38, 39, 1959, 1454, 1218, 1230, 84, 1260]\n"
      ]
     }
    ],
@@ -339,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 20.43it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 366.27it/s]\n"
      ]
     },
     {
@@ -355,7 +316,7 @@
        "0.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
